# cli-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  get_apple.py  get_transcripts.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: config.example.md  config.json
getscript/: __init__.py  apple.py  cli.py  completions.py  config.py  detect.py  output.py  picker.py  progress.py  search.py  upload.py  youtube.py
man/: getscript.1
tests/: test_apple.py  test_config.py  test_detect.py  test_integration.py  test_output.py  test_picker.py  test_search.py  test_upload.py  test_youtube.py
