[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getscript"
version = "0.11.0"
description = "Fast, Unix-friendly CLI for fetching transcripts from YouTube and Apple Podcasts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Voxly"}]
keywords = ["transcript", "youtube", "podcast", "apple-podcasts", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "youtube-transcript-api>=1.0.0",
    "requests>=2.28.0",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/outerbanks73/cli-tools"
Documentation = "https://voxlytranscribes.com/docs/getscript"
Repository = "https://github.com/outerbanks73/cli-tools"
Issues = "https://github.com/outerbanks73/cli-tools/issues"

[project.scripts]
getscript = "getscript.cli:main"

[tool.setuptools.packages.find]
include = ["getscript*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
